Created adopta.html and styled

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             </a>
             <ul class="nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#"> Inicio </a>
+                    <a class="nav-link" href="#">Inicio </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"> Sobre nosotros</a>
+                    <a class="nav-link" href="#">Sobre nosotros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"> Adopta </a>
+                    <a class="nav-link" href="adopta.html">Adopta </a>
                 </li>
             </ul>
     </header>
